# RPiTelemetry

./: CMakeLists.txt  LICENSE  README.md  main.c
include/: DataParsing.h  Sending.h
src/: DataParsing.c  Sending.c
